# Advent

./: README  adv440.z8  adv550.z8  adv551.z8  advent.z8  almazar.z8  build-vbcc.sh  index-440.html  index-550.html  index-551.html  index-almazar.html  index.html  play-440.html  play-550.html  play-551.html  play-almazar.html  play.html  style.css  vbcc-patch.diff
ANON0501/: MANIFEST  README  a1toa5.f  a5toa1.f  adv.data.1  adv.data.2  adv.data.3  at.f  athand.f  bitoff.f  biton.f  ciao.f  class.f  clrlin.f  confuz.f  datime.f  dead.f  drop.f  dstroy.f  edible.f  enclsd.f  getin.f  getlin.f  getobj.f  getwds.f  gripe.f.alt  gspeak.f  hours.f  hoursx.f  insert.f  juggle.f  liq.f  liqloc.f  living.f  locked.f  log.f  log.f.alt  login.f  logout.f  lookin.f  (+27 more)
ANON1400/: adven2.ocr.txt  advent.ocr.txt
ARNA0660/: Makefile  README
Almazar/: Makefile  README.md  almazar.c
CROW0000/: README  advdat.77-03-31  advf4.77-03-23  advf4.77-03-31
DAIM0000/: ADVCAVE.H  ADVDEC.H  ADVDEF.H  ADVENT  ADVENT.C  ADVENT.DOC  ADVENT.H  ADVENT0.C  ADVENT1.TXT  ADVENT2.TXT  ADVENT3.TXT  ADVENT4.TXT  (+12 more)
OSKA0501/: COPYING  INSTALL  Makefile.am  Makefile.in  README  configure  configure.ac
OSKA0501/src/: INSTALL  Makefile.am  Makefile.in  a1toa5.f  a5toa1.f  advent.f  advent.tcl  adventure.text  ajar.f  bitoff.f  bits.f  bitset.f  blind.f  bug.f  burden.f  carry.f  ciao.f  clrlin.f  config.f.in  dark.f  datime.f  eqv.f  forced.f  getin.f  getlin.f  getobj.f  getwds.f  gripe.f.old  here.f  hinged.f  holding.f  hours.f  hoursx.f  inside.f  liq2.f  liqloc.f  locks.f  log.f  log.f.old  login.f  (+39 more)
(+420 files in other folders)
