AC_INIT(advent, 5.2.2-5, myrkraverk@users.sourceforge.net)
AC_CONFIG_SRCDIR([src/advent.f])

AM_INIT_AUTOMAKE
AC_PROG_F77(g77) # There is no support for anything else
AC_PROG_INSTALL

#AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile])
AC_CONFIG_FILES([Makefile src/Makefile src/config.f])
AC_OUTPUT

