bin_PROGRAMS = advent
advent_SOURCES = advent.f a1toa5.f a5toa1.f ajar.f at.f athand.f bitoff.f biton.f bits.f bitset.f blind.f bug.f burden.f carry.f ciao.f class.f clrlin.f confuz.f dark.f datime.f dead.f drop.f dstroy.f edible.f enclsd.f eqv.f forced.f getin.f getlin.f getobj.f getwds.f gripe.f here.f hinged.f holding.f hours.f hoursx.f insert.f inside.f juggle.f liq.f liq2.f liqloc.f living.f locked.f locks.f log.f login.f logout.f lookin.f main.f maint.f monitr.f motd.f move.f mspeak.f newhrs.f newhrx.f noway.f opaque.f outsid.f pct.f plural.f poof.f portal.f printd.f pspeak.f put.f ran.f rating.f remove.f rspeak.f small.f speak.f start.f toting.f touppr.f travl.f treasr.f val.f vessel.f vocab.f vocabx.f wearing.f wizard.f worn.f xmap.f xspeak.f yes.f yesm.f yesx.f

main.$(OBJEXT): config.f

adventdir=$(prefix)/share/games
advent_DATA=adventure.text

EXTRA_DIST = advent.tcl script.tcl pma1.pma pma2.pma gripe.f.old log.f.old monitr.f.old motd.f.old adventure.text
